3.9.1/_sources/gallery/pie_and_polar_charts/index.rst.txt


.. _sphx_glr_gallery_pie_and_polar_charts:

.. _pie_and_polar_charts:

Pie and polar charts
====================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of plotting a pie chart.">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_pie_features_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_pie_features.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pie charts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Make a &quot;bar of pie&quot; chart where the first slice of the pie is &quot;exploded&quot; into a bar chart with ...">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_bar_of_pie_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_bar_of_pie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar of pie</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The following examples show two ways to build a nested pie chart in Matplotlib. Such charts are...">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_nested_pie_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_nested_pie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nested pie charts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Welcome to the Matplotlib bakery. We will create a pie and a donut chart through the pie method...">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_pie_and_donut_labels_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_pie_and_donut_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Labeling a pie and a donut</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of bar plot on a polar axis.">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_polar_bar_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_polar_bar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar chart on polar axis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of a line plot on a polar axis.">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_polar_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_polar_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polar plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of error bar plot in polar coordinates. Theta error bars are curved lines ended with caps ...">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_polar_error_caps_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_polar_error_caps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Error bar rendering on polar axis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using a legend on a polar-axis plot.">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_polar_legend_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_polar_legend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polar legend</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Size increases radially in this example and color increases with angle (just to verify the symb...">

.. only:: html

  .. image:: /gallery/pie_and_polar_charts/images/thumb/sphx_glr_polar_scatter_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_pie_and_polar_charts_polar_scatter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatter plot on polar axis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/pie_and_polar_charts/pie_features
   /gallery/pie_and_polar_charts/bar_of_pie
   /gallery/pie_and_polar_charts/nested_pie
   /gallery/pie_and_polar_charts/pie_and_donut_labels
   /gallery/pie_and_polar_charts/polar_bar
   /gallery/pie_and_polar_charts/polar_demo
   /gallery/pie_and_polar_charts/polar_error_caps
   /gallery/pie_and_polar_charts/polar_legend
   /gallery/pie_and_polar_charts/polar_scatter

